styles.css
body {
  width:90%;
  background:#181818;
  color:#b0b0b0;
  font:10pt Verdana, DejaVu Sans, Arial;
  padding:0px;
  margin: 0px;
  text-align:left;
}

#logo {
  margin-bottom:0em;
  margin-left:4em;
}

#navigation {
  padding:5px;
  font-size: 120%;
  color: white;
  width: 12em;
  float: left;
  margin-right: 1em;
  margin-bottom: 1em;
}

#navigation ul {
  margin: 0; padding: 0;
}

#navigation li {
  list-style: none;
  border-left: 0.1em solid white;
  margin: 0; padding: 0;
  padding-left:0.2em;
  margin-bottom: 0.5em;
}

#top-navigation {
  margin-bottom: 1em;
}

#top-navigation ul {
  margin: 0; padding: 0;
}

#top-navigation li {
  list-style: none;
  margin: 0;
  padding:0;
  padding-right: 0.5em;
  margin-left:1.3em;
}

#top-navigation > ul > li {
  float:right;
  border-right: 0.1em solid white;
}

#container {
  margin:0px auto;
  padding:3em;
  margin-top: 3em;
  width: 75em;
}

#content {
  padding:1em;
  float:right;
  width:55em;
  background: rgb(45, 45, 45);
}

#footer {
  margin-top: 1em;
  font-size: 80%;
  float: right;
}

.news-title {
  color: white;
}

.news-title-frontpage {
  color: white;
  font-size: 120%;
}

.news {
  margin-bottom: 3em;
}

#berlios-badge {
  margin-top: 3em;
  font:10pt Verdana, DejaVu Sans, Arial;
}

table {
    border: 1px solid gray;
    border-collapse: collapse;
}

table th {
    border: 1px solid gray;
    padding: 0.3em;
}

table td {
    border: 1px solid gray;
    padding: 0.3em;
}

.lenslist-highlight {
    background-color: #51734E;
}

.lenslist-bg1 {
    background-color: #000000;
}

.lenslist-bg2 {
    background-color: #181818;
}

strong {
  color: white;
}

a:link {
  background:transparent;
  text-decoration:none;
  color:#ffffff;
}
a:visited {
  background:transparent;
  color:#ffffff;
}
a:hover {
  background:transparent;
  color:#74A0DA;
}
a:active {
  background:transparent;
  color:#ffffff;
}

.active {
  color: #74A0DA !important;
}

